{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 36,
  "lineage": "59e4b9ba-d7e2-7da9-43c0-56aac7e75657",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-052d2f32df576cf7d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052d2f32df576cf7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20241031092100860400000001",
            "name_prefix": "terraform-",
            "owner_id": "992382545251",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "limor-cluster-nodes-sg"
            },
            "tags_all": {
              "Name": "limor-cluster-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adf5159595ef567c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-07d6b3c935bce80b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d6b3c935bce80b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052d2f32df576cf7d"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052d2f32df576cf7d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "limor-cluster-sg",
            "name_prefix": "",
            "owner_id": "992382545251",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "limor-cluster-sg"
            },
            "tags_all": {
              "Name": "limor-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adf5159595ef567c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    }
  ]
}